--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2024"
 description = "A pure Rust library for fast, dynamic partial charge calculation via the QEq method."
 
 [dependencies]
+thiserror = "2.0.17"
 toml = "0.9.7"
 serde = { version = "1.0.188", features = ["derive"] }
 
