--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.6.0"
+approx = "0.5"
 
 [lib]
 name = "cheq"
