chore(package): Update keywords in Cargo.toml to enhance relevance for molecular dynamics

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ keywords = [
     "qeq",
     "partial-charges",
     "force-fields",
-    "computational-chemistry",
+    "molecular-dynamics",
 ]
 categories = ["science", "simulation"]
 readme = "README.md"
