--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ faer = "0.23.2"
 thiserror = "2.0.17"
 toml = "0.9.7"
 serde = { version = "1.0.188", features = ["derive"] }
+clap = { version = "4.4.7", features = ["derive"], optional = true }
 
 [dev-dependencies]
 tempfile = "3.6.0"
@@ -33,6 +34,15 @@ approx = "0.5"
 [lib]
 name = "cheq"
 path = "src/lib.rs"
+
+[[bin]]
+name = "cheq"
+path = "src/bin/main.rs"
+required-features = ["cli"]
+
+[features]
+default = ["cli"]
+cli = ["dep:clap"]
 
 [profile.release]
 opt-level = 3
