--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ categories = ["science", "simulation", "command-line-utilities"]
 readme = "README.md"
 
 [dependencies]
+rayon = "1.11.0"
 libm = "0.2.8"
 faer = "0.23.2"
 thiserror = "2.0.17"
