--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
             # - os: ubuntu-22.04-arm64
             #   os_name: "Linux aarch64"
             #   target: aarch64-unknown-linux-gnu
-          - os: macos-13
+          - os: macos-15-intel
             os_name: "macOS x86_64"
             target: x86_64-apple-darwin
           - os: macos-14
