--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ readme = "README.md"
 [dependencies]
 rayon = "1.11.0"
 libm = "0.2.8"
+sto-ns = "0.1.0"
 faer = "0.23.2"
 thiserror = "2.0.17"
 toml = "0.9.7"
