ci(project): Include BENCHMARKS.md in release artifacts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,7 @@ jobs:
           SOURCE_PATH="target/${{ matrix.target }}/release/$BINARY_NAME"
 
           cp "$SOURCE_PATH" "$ARTIFACT_DIR/$BINARY_NAME"
-          cp LICENSE README.md USAGE.md "$ARTIFACT_DIR/"
+          cp LICENSE README.md USAGE.md BENCHMARKS.md "$ARTIFACT_DIR/"
 
           cd $ARTIFACT_DIR
 
