--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,9 @@ jobs:
           - os: ubuntu-latest
             os_name: "Linux x86_64"
             target: x86_64-unknown-linux-gnu
-            # - os: ubuntu-22.04-arm64
-            #   os_name: "Linux aarch64"
-            #   target: aarch64-unknown-linux-gnu
+          - os: ubuntu-24.04-arm
+            os_name: "Linux aarch64"
+            target: aarch64-unknown-linux-gnu
           - os: macos-15-intel
             os_name: "macOS x86_64"
             target: x86_64-apple-darwin
